learning about second branch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h2>How r u doing</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, harum!</p>
     <h3>Bangladesh</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, esse!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione?</p>
     <img src="xxx.jpg" alt="">
 </body>
 </html>
