adding more coad

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>Bangladesh</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, esse!</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     <img src="xxx.jpg" alt="">
 </body>
 </html>
