--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, esse!</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <img src="xxx.jpg" alt="">
+    <img src="xxx.jpg" alt="" width="900px" height="700px">
 </body>
 </html>
